--- a/style.css
+++ b/style.css
@@ -188,3 +188,98 @@ a{
   border-top: 1px solid white;
   opacity: 0.4;
 }
+.music-player{
+  display: flex;
+  align-items: center;
+}
+.album{
+  width: 25%;
+}
+.player{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.controls{
+  width: 25%;
+}
+.player-controls-icon{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.player-control-icon{
+  height: 1rem;
+  margin-right: 1.75rem;
+  opacity: 0.7;
+}
+.player-control-icon:hover{
+  opacity: 1;
+}
+.playback-bar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+}
+.progress-bar{
+  width: 70%;
+  appearance: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+.progress-bar::-webkit-slider-runnable-track{
+  background-color: #ddd;
+  border-radius: 100px;
+  height: 0.2rem;
+}
+.progress-bar::-webkit-slider-thumb{
+  appearance: none;
+  height: 1rem;
+  width: 1rem;
+  background-color: #1bd760;
+  border-radius: 50%;
+  margin-top: -7px;
+}
+.album{
+  display: flex;
+  align-items: center;
+}
+.album-img{
+  width: 4rem;
+  border-radius: 8px;
+}
+.album-txt{
+  font-size: 15px;
+  color: white;
+  margin-left: 1.05rem;
+}
+.control i{
+  padding-right: 0.75rem;
+  opacity: 0.7;
+}
+.control i:hover{
+  padding-right: 1rem;
+  opacity: 1;
+}
+
+input[type="range"]#volume {
+  -webkit-appearance: none;
+  appearance: none; 
+  height: 4px; 
+  background-color: #ddd; 
+  outline: none; 
+  border-radius: 5px;
+}
+
+input[type="range"]#volume::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 15px; 
+  height: 15px; 
+  background-color: #4CAF50;
+  border-radius: 50%; 
+  cursor: pointer;
+}
+
